--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
+    <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
@@ -42,9 +42,143 @@
 
 
     <main>
+
+        <!-- about -->
         <section class="section-about">
-            <h2 class="heading-secondary">Exciting Tour for Adventurous People</h2>
+
+            <!-- haeder -->
+            <div class="u-center-text u-mb-lg">
+                <h2 class="heading-secondary">Exciting Tour for Adventurous People</h2>
+            </div>
+            <!-- content -->
+            <div class="row">
+
+                <!-- paragraphs -->
+                <div class="col-1-of-2">
+                    <h3 class="heading-tertiary u-mb-sm">
+                        You're going to fall in love with nature
+                    </h3>
+                    <p class="paragraph">Lorem ipsum dolor sit 
+                        amet consectetur adipisicing elit. 
+                        Error qui, illum fugit animi aliquid a. 
+                        Dolor ut dolores veritatis vitae dolore ex! 
+                        Impedit corporis molestiae numquam, 
+                        consectetur reiciendis cum eum.
+                    </p>
+
+                    <h3 class="heading-tertiary u-mb-sm">
+                        Live adventures like you have never before
+                    </h3>
+                    <p class="paragraph">Lorem ipsum dolor sit 
+                        amet consectetur adipisicing elit. Facere, 
+                        alias exercitationem? Repellendus inventore molestias, 
+                        harum animi optio, rerum excepturi minima distinctio 
+                        nostrum reprehenderit nihil ad 
+                        nulla quidem eveniet repudiandae tenetur?
+                    </p>
+
+                    <a href="#" class="btn-text">Learn more &rarr;</a>
+                </div>
+                <!-- images -->
+                <div class="col-1-of-2">
+                    <div class="composition">
+                        <img src="img/nat-1-large.jpg" alt="photo-1" class="composition-photo composition-photo-1">
+                        <img src="img/nat-2-large.jpg" alt="photo-2" class="composition-photo composition-photo-2">
+                        <img src="img/nat-3-large.jpg" alt="photo-3" class="composition-photo composition-photo-3">
+                    </div>
+                </div>
+
+            </div>
+
         </section>
+
+        <!-- features -->
+        <section class="section-features">
+            <div class="row">
+                <div class="col-1-of-4">
+                    <div class="feature-box u-center-text">
+                        <i class=" feature-box-icon icon-basic-world"></i>
+                        <h3 class="heading-tertiary u-mb-sm">
+                            Explore the world
+                        </h3>
+                        <p class="feature-box-text">Lorem ipsum dolor sit 
+                            amet consectetur adipisicing elit. 
+                            d itaque amet assumenda quod atque ipsa repellendus.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-1-of-4">
+                    <div class="feature-box u-center-text">
+                        <i class=" feature-box-icon icon-basic-compass"></i>
+                        <h3 class="heading-tertiary u-mb-sm">
+                            Meet the nature
+                        </h3>
+                        <p class="feature-box-text">Lorem ipsum dolor sit 
+                            amet consectetur adipisicing elit. 
+                            d itaque amet assumenda quod atque ipsa repellendus.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-1-of-4">
+                    <div class="feature-box u-center-text">
+                        <i class=" feature-box-icon icon-basic-map"></i>
+                        <h3 class="heading-tertiary u-mb-sm">
+                            Find your way
+                        </h3>
+                        <p class="feature-box-text">Lorem ipsum dolor sit 
+                            amet consectetur adipisicing elit. 
+                            d itaque amet assumenda quod atque ipsa repellendus.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-1-of-4">
+                    <div class="feature-box u-center-text">
+                        <i class=" feature-box-icon icon-basic-heart"></i>
+                        <h3 class="heading-tertiary u-mb-sm">
+                            Live a healthier life
+                        </h3>
+                        <p class="feature-box-text">Lorem ipsum dolor sit 
+                            amet consectetur adipisicing elit. 
+                            d itaque amet assumenda quod atque ipsa repellendus.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- tours -->
+        <section class="section-tours">
+            <!-- header -->
+            <div class="u-center-text u-mb-lg">
+                <h2 class="heading-secondary">Most Populer tours</h2>
+            </div>
+
+            <!-- content -->
+            <div class="row">
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card-side card-side-front">
+                            <div class="card-picture card-picture-1">
+                                jjjj
+                            </div>
+                            <div class="card-heading">
+                                heading
+                            </div>
+                            <div class="card-details">
+                                details
+                            </div>
+                        </div>
+                        
+                        <div class="card-side card-side-back card-side-back-1">back</div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
     </main>
 
 
