--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
         
     </div>
 
-
     <main>
 
         <!-- about -->
@@ -283,13 +282,27 @@
 
         <!-- stories -->
         <section class="section-stories">
+            
+            <!-- bg-video -->
+            <div class="bg-video">
+                <video class="bg-video-content" autoplay muted loop>
+                    <source src="img/video.mp4" type="video/mp4">
+                    <source src="img/video.webm" type="video/webm">
+                        Your Browser is not supported!
+                </video>
+            </div>
+
+            <!-- header -->
             <div class="u-mb-lg u-center-text">
                 <h2 class="heading-secondary">we make people genuinely happy</h2>
             </div>
+
+            <!-- story-1 -->
             <div class="row">
                 <div class="story">
                     <figure class="story-shape">
-
+                        <img src="img/nat-8.jpg" alt="Person on a tour" class="story-img">
+                        <figcaption class="story-caption">Mary Smith</figcaption>
                     </figure>
                     <div class="story-text">
                         <h3 class="heading-tertiary u-mb-sm">
@@ -297,12 +310,68 @@
                         </h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                             Enim rerum alias illum non in. Possimus ad cupiditate excepturi. 
-                            Repellat dicta, quo quia dolorem exercitationem 
+                            vitae natus incidunt temporibus repellendus voluptatibus. 
+                            Repellat dicta, quo quia dolorem 
                             vitae natus incidunt temporibus repellendus voluptatibus.</p>
                     </div>
                 </div>
             </div>
+
+            <!-- story-2 -->
+            <div class="row">
+                <div class="story">
+                    <figure class="story-shape">
+                        <img src="img/nat-9.jpg" alt="Person on a tour" class="story-img">
+                        <figcaption class="story-caption">Jack Wilson</figcaption>
+                    </figure>
+                    <div class="story-text">
+                        <h3 class="heading-tertiary u-mb-sm">
+                            wow! my life is completely different now
+                        </h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                            Enim rerum alias illum non in. Possimus ad cupiditate excepturi. 
+                            vitae natus incidunt temporibus repellendus voluptatibus. 
+                            Repellat dicta, quo quia dolorem 
+                            vitae natus incidunt temporibus repellendus voluptatibus.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- button -->
+            <div class="u-center-text u-mt-xl">
+                <a href="#" class="btn-text">Read all stories &rarr;</a>
+            </div>
+
         </section>
+
+        <section class="section-book">
+            <div class="row">
+                <div class="book">
+                    <div class="book-form">
+                        <form action="#" class="form">
+
+                            <!-- header -->
+                            <div class="u-mb-md">
+                                <h2 class="heading-secondary">Start booking now</h2>
+                            </div>
+
+                            <!-- forms -->
+                            <div class="form-group">
+                                <input type="text" class="form-input" id="name" placeholder="Full Name" required>
+                                <label for="name" class="form-label">Full Name</label>
+                            </div>
+                            <div class="form-group">
+                                <input type="email" class="form-input" id="email" placeholder="Email Address" required>
+                                <label for="email" class="form-label">Email Address</label>
+                            </div>
+
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
 
 
