--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <!-- nav-list -->
         <nav class="navigation-nav">
             <ul class="navigation-list">
-                <li class="navigation-item"><a href="#" class="navigation-link"><span>01</span> About Natours</a></li>
-                <li class="navigation-item"><a href="#" class="navigation-link"><span>02</span> Your benefits</a></li>
-                <li class="navigation-item"><a href="#" class="navigation-link"><span>03</span> Populer tours</a></li>
-                <li class="navigation-item"><a href="#" class="navigation-link"><span>04</span> Stories</a></li>
-                <li class="navigation-item"><a href="#" class="navigation-link"><span>05</span> Book Now!</a></li>
+                <li class="navigation-item"><a href="#section-about" class="navigation-link"><span>01</span> About Natours</a></li>
+                <li class="navigation-item"><a href="#section-features" class="navigation-link"><span>02</span> Your benefits</a></li>
+                <li class="navigation-item"><a href="#section-tours" class="navigation-link"><span>03</span> Populer tours</a></li>
+                <li class="navigation-item"><a href="#section-stories" class="navigation-link"><span>04</span> Stories</a></li>
+                <li class="navigation-item"><a href="#section-book" class="navigation-link"><span>05</span> Book Now!</a></li>
             </ul>
         </nav>
     </div>
@@ -68,9 +68,9 @@
     <main>
 
         <!-- about -->
-        <section class="section-about">
+        <section class="section-about" id="section-about">
 
-            <!-- haeder -->
+            <!-- header -->
             <div class="u-center-text u-mb-lg">
                 <h2 class="heading-secondary">Exciting Tour for Adventurous People</h2>
             </div>
@@ -117,7 +117,7 @@
         </section>
 
         <!-- features -->
-        <section class="section-features">
+        <section class="section-features" id="section-features">
             <div class="row">
                 <div class="col-1-of-4">
                     <div class="feature-box u-center-text">
@@ -174,7 +174,7 @@
         </section>
 
         <!-- tours -->
-        <section class="section-tours">
+        <section class="section-tours" id="section-tours">
 
             <!-- header -->
             <div class="u-center-text u-mb-lg">
@@ -216,7 +216,7 @@
                                     <p class="card-price-only">Only</p>
                                     <p class="card-price-value">$297</p>
                                 </div>
-                                <a href="#" class="btn btn-white">Book Now!</a>
+                                <a href="#popup" class="btn btn-white">Book Now!</a>
                             </div>
                         </div>
                     </div>
@@ -253,7 +253,7 @@
                                     <p class="card-price-only">Only</p>
                                     <p class="card-price-value">$497</p>
                                 </div>
-                                <a href="#" class="btn btn-white">Book Now!</a>
+                                <a href="#popup" class="btn btn-white">Book Now!</a>
                             </div>
                         </div>
                     </div>
@@ -290,7 +290,7 @@
                                     <p class="card-price-only">Only</p>
                                     <p class="card-price-value">$897</p>
                                 </div>
-                                <a href="#" class="btn btn-white">Book Now!</a>
+                                <a href="#popup" class="btn btn-white">Book Now!</a>
                             </div>
                         </div>
                     </div>
@@ -306,7 +306,7 @@
         </section>
 
         <!-- stories -->
-        <section class="section-stories">
+        <section class="section-stories" id="section-stories">
 
             <!-- bg-video -->
             <div class="bg-video">
@@ -370,7 +370,7 @@
         </section>
 
         <!-- form -->
-        <section class="section-book">
+        <section class="section-book" id="section-book">
             <div class="row">
                 <div class="book">
                     <div class="book-form">
@@ -422,7 +422,6 @@
 
     </main>
 
-
     <!-- footer -->
     <footer class="footer">
         <div class="footer-logo-box">
@@ -449,6 +448,29 @@
         </div>
     </footer>
 
+    <!-- popup -->
+    <div class="popup" id="popup">
+        <div class="popup-content">
+            <div class="popup-left"><img src="img/nat-8.jpg" alt="tour photo" class="popup-img"><img src="img/nat-9.jpg" alt="tour photo" class="popup-img"></div>
+            <div class="popup-right">
+                <a href="#section-tours" class="popup-close">&times;</a>
+                <h2 class="heading-secondary u-mb-sm">start booking now</h2>
+                <h3 class="heading-tertiary u-mb-sm">important &ndash; please read this terms before booking</h3>
+                <p class="popup-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    molestiae recusandae asperiores deserunt quos expedita voluptate!
+                    Maiores assumenda perspiciatis amet suscipit quas optio, 
+                    quidem quod nemo dolorem, dolorum enim magnam 
+                    itaque obcaecati ipsum maxime necessitatibus eos impedit molestias.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                    Ratione atque, fuga cumque incidunt totam architecto libero 
+                    sequi dolore excepturi sapiente modi temporibus nisi quo 
+                    impedit eveniet. Odio earum vero tempora.
+                </p>
+                <a href="#" class="btn btn-green"> book now!</a>
+            </div>
+        </div>
+    </div>
 
 </body>
 
